--- a/moveit_1/config/fake_controllers.yaml
+++ b/moveit_1/config/fake_controllers.yaml
@@ -7,10 +7,6 @@ controller_list:
       - joint_3
       - joint_4
       - joint_5
-  - name: fake_rldp5_hand_controller
-    type: $(arg fake_execution_type)
-    joints:
-      []
 initial:  # Define initial robot poses per group
   - group: rldp5_arm
-    pose: pose1
+    pose: p1
