--- a/rl_dp_5/rl_dp_5_moveit/config/ros_controllers.yaml
+++ b/rl_dp_5/rl_dp_5_moveit/config/ros_controllers.yaml
@@ -32,37 +32,37 @@ rl_dp_5_controllers_position:
       d: 1
       i: 1
       i_clamp: 1
-rldp5_controller:
-  type: effort_controllers/JointTrajectoryController
-  joints:
-    - joint_1
-    - joint_2
-    - joint_3
-    - joint_4
-    - joint_5
-  gains:
-    joint_1:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint_2:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint_3:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint_4:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint_5:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
+# rldp5_controller:
+#   type: effort_controllers/JointTrajectoryController
+#   joints:
+#     - joint_1
+#     - joint_2
+#     - joint_3
+#     - joint_4
+#     - joint_5
+#   gains:
+#     joint_1:
+#       p: 100
+#       d: 1
+#       i: 1
+#       i_clamp: 1
+#     joint_2:
+#       p: 100
+#       d: 1
+#       i: 1
+#       i_clamp: 1
+#     joint_3:
+#       p: 100
+#       d: 1
+#       i: 1
+#       i_clamp: 1
+#     joint_4:
+#       p: 100
+#       d: 1
+#       i: 1
+#       i_clamp: 1
+#     joint_5:
+#       p: 100
+#       d: 1
+#       i: 1
+#       i_clamp: 1
