--- a/rldp5_msgs/CMakeLists.txt
+++ b/rldp5_msgs/CMakeLists.txt
@@ -69,7 +69,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
    DEPENDENCIES
-   actionlib_msgs#   std_msgs
+   actionlib_msgs   std_msgs
  )
 
 ################################################
