--- a/rldp5_msgs/package.xml
+++ b/rldp5_msgs/package.xml
@@ -55,6 +55,8 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>actionlib</build_depend>
+  <exec_depend>actionlib</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
