--- a/rldp5_msgs/package.xml
+++ b/rldp5_msgs/package.xml
@@ -37,7 +37,7 @@
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
   <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
+     <build_depend>message_generation</build_depend>
   <!-- Use build_export_depend for packages you need in order to build against this package: -->
   <!--   <build_export_depend>message_generation</build_export_depend> -->
   <!-- Use buildtool_depend for build tool packages: -->
@@ -55,6 +55,8 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>actionlib</build_depend>
+  <exec_depend>actionlib</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
