Ros Actions - Working code
Prior to the test on robot

--- a/rl_dp_5/rldp5_msgs/CMakeLists.txt
+++ b/rl_dp_5/rldp5_msgs/CMakeLists.txt
@@ -64,6 +64,9 @@ find_package(catkin REQUIRED COMPONENTS
 add_action_files(
   FILES
   rldp5_robot.action
+  home_all.action
+  home.action
+  set_des_pos.action
 )
 
 
